--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^6.5.2",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "eslint": "7.19.0",
