--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
+    "cookie-session": "^2.0.0",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.0.1",
@@ -23,6 +24,8 @@
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.4",
+    "passport": "^0.5.0",
+    "passport-google-oauth20": "^2.0.0",
     "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
