--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jimp": "^0.16.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
